--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>jianshu</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
